K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: platforms-depl
spec:
   replicas: 1
   selector:
        matchLabels:
            app: plataformservice
   template:
        metadata:
            labels:
                app: plataformservice
        spec:
            containers:
                -   name: plataformservice
                    image: gabopontes/plataformservice:latest
