K8S/platforms-np-rv.yaml
apiVersion: v1
kind: Service
metadata:
    name: platformnpservice-srv
spec:
    type: NodePort
    selector:
        app: plataformservice
    ports:
        - name: plataformservice
          protocol: TCP
          port: 8080
          targetPort: 8080
